reorg folder, rooms sync

--- a/server/client/templates/index.html
+++ b/server/client/templates/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    <h1 id="welcome"></h1>
+    <div id="rooms"></div>
+
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     
@@ -25,6 +28,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     
     <script>
         // Your web app's Firebase configuration
