--- a/server/client/templates/index.html
+++ b/server/client/templates/index.html
@@ -12,9 +12,18 @@
     <meta name="msapplication-tap-highlight" content="no">
     <link rel="icon" href="images/favicon.ico">
 
+    <!-- FirebaseUI -->
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 </head>
 
 <body>
+    <div id="loading" style="display: none;">Loading...</div>
+    <div id="firebaseui-auth-container"></div>
+    <div id="content" style="display: none;">
+        <button onclick="signOut()">Sign Out</button>
+    </div>
+
     <h1 id="welcome"></h1>
     <div id="rooms"></div>
     <div id="currentRoom"></div>
